feat: JDK 21 support